<resources>
    <string name="app_name">TasksApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="end_date">End Date</string>
    <string name="dateHint">dd/MM/yyyy</string>
    <string name="textview">TextView</string>
    <string name="info">Info</string>
    <string name="TimeHint">12:20</string>
    <string name="time">End Time</string>
    <string name="is_completed">Is Completed</string>
    <string name="submit">Submit</string>
    <string name="Info">Info</string>
    <string name="save">save</string>
    <string name="cancel">Cancel</string>
    <string name="channel_name">task_app_chanel</string>
    <string name="channel_description">task_app_chanel_desc</string>
    <string name="delete">delete</string>
</resources>